# MicroSiteGenerator

./: .gitignore  package-lock.json  pyproject.toml  requirements.txt
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ActionButtons.tsx  DemoList.tsx  Header.tsx  LandingPage.tsx  QuickActions.tsx  StatusBadge.tsx
frontend/src/data/: mockData.ts
frontend/src/types/: index.ts
micrositepilot/: server.py  workflow.py
micrositepilot/agents/: info_extractor_agent.py  mcp_agent.py  site_builder_agent.py  transcription_agent.py
micrositepilot/utils/: netlify_deployment.py
microsites/: demo_20250601_173833.html
