[project]
name = "micrositepilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.5.6",
    "google-adk>=1.1.1",
    "netlify-python>=0.3.2",
    "openinference-instrumentation-agno>=0.1.6",
    "opentelemetry-exporter-otlp>=1.33.1",
    "pydub>=0.25.1",
]
